additional fix for whitespace issue in gn-comma-list

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_result_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_result_default.less
@@ -299,6 +299,9 @@
       a {
         line-break: normal;
       }
+      &:before {
+        letter-spacing: normal;
+      }
       &:after {
         content: ", ";
         letter-spacing: normal;
